# moveit_hrp2

./: hrp2_moveit.rosinstall
hrp2jsknt_moveit_config/config/: HRP2JSKNT.srdf  hrp2jsknt_controllers.yaml  kinematics.yaml  sensors_xtion.yaml
hrp2jsknt_moveit_config/launch/: HRP2JSKNT_demo.launch  HRP2JSKNT_moveit_sensor_manager.launch.xml  demo.launch  dummy_hand_state_publisher.launch  move_group.launch  moveit.rviz  planning_context.launch  sensor_manager.launch.xml  start_hrp2_moveit.launch
hrp2jsknt_moveit_plugins/: hrp2jsknt_planning_request_adapters_plugin_description.xml
hrp2jsknt_moveit_plugins/hrp2jsknt_moveit_constraint_sampler/include/hrp2jsknt_moveit_constraint_sampler/: hrp2jsknt_constraint_sampler.h
hrp2jsknt_moveit_plugins/hrp2jsknt_moveit_constraint_sampler/src/: hrp2jsknt_constraint_sampler.cpp
staro_moveit_config/: .setup_assistant  package.xml
staro_moveit_config/config/: STARO.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
staro_moveit_config/launch/: demo.launch  move_group.launch  moveit.rviz  planning_context.launch
staro_moveit_plugins/: CMakeLists.txt  package.xml  staro_moveit_constraint_sampler_plugin_description.xml
staro_moveit_plugins/staro_moveit_constraint_sampler/: CMakeLists.txt
staro_moveit_plugins/staro_moveit_constraint_sampler/include/staro_moveit_constraint_sampler/: staro_constraint_sampler.h
staro_moveit_plugins/staro_moveit_constraint_sampler/src/: staro_constraint_sampler.cpp
