<package>
  <name>staro_moveit_plugins</name>
  <version>0.0.1</version>
  <description>STARO specific plugins for MoveIt</description>
  <author email="youhei@jsk.imi.i.u-tokyo.ac.jp">YoheiKakiuchi</author>

  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">YoheiKakiuchi</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pluginlib</run_depend>

  <export>
    <moveit_core plugin="${prefix}/staro_moveit_constraint_sampler_plugin_description.xml"/>
  </export>

</package>
